--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -81,7 +81,7 @@ header nav a:hover{
 
 /*Showcase*/
 #bigcase{
-    background-image: url('../img/system.jpg.jpg');
+    background-image: url('img/system.jpg.');
     min-height: 300px;
     background-position: center;
     background-repeat: no-repeat;
